<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_ConfirmitionEmailActivity"
    android:background="@color/white"
    tools:context=".ConfirmationEmailActivity">

    <ImageView
        android:id="@+id/backActivity"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/next"
        android:src="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@id/imageView"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:contentDescription="@string/next"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/backActivity"
        app:layout_constraintEnd_toEndOf="@+id/backActivity"
        app:layout_constraintTop_toTopOf="@+id/backActivity" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/emailCode"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/txt1"
        style="@style/editTextEmailCode"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="300dp"
        android:labelFor="@id/txt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/txt2"
        style="@style/editTextEmailCode"
        android:layout_marginBottom="300dp"
        android:background="@drawable/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt3"
        app:layout_constraintStart_toEndOf="@id/txt1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txt3"
        style="@style/editTextEmailCode"
        android:layout_marginBottom="300dp"
        android:background="@drawable/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt4"
        app:layout_constraintStart_toEndOf="@id/txt2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/txt4"
        style="@style/editTextEmailCode"
        android:layout_marginBottom="300dp"
        android:background="@drawable/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/repeatedCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeatedCode"
        android:textAlignment="center"
        android:textColor="@color/textGray"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3"
        tools:ignore="TextContrastCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>