<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_CreateUserCard"
    android:background="@color/white"
    tools:context=".CreateUserCardActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/createMedicineCard"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:textColor="@color/textBlue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="335dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/createMedicineCardDescription1"
        android:textColor="@color/textGray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/createMedicineCardDescription2"
        android:textColor="@color/textGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text"
        android:hint="@string/name"
        android:textColorHint="@color/textGray"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/textMiddleName"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/middleName"
        android:textColorHint="@color/textGray"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textName"
        app:layout_constraintStart_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/textLastName"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/lastName"
        android:textColorHint="@color/textGray"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textMiddleName"
        app:layout_constraintStart_toStartOf="@+id/textMiddleName"
        app:layout_constraintTop_toBottomOf="@+id/textMiddleName"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/textDateOfBirth"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/dateOfBirth"
        android:textColorHint="@color/textGray"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textLastName"
        app:layout_constraintStart_toStartOf="@+id/textLastName"
        app:layout_constraintTop_toBottomOf="@+id/textLastName"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:prompt="@string/gender"
        android:textColor="@color/textGray"
        app:layout_constraintEnd_toEndOf="@+id/textDateOfBirth"
        app:layout_constraintStart_toStartOf="@+id/textDateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/textDateOfBirth" />

    <Button
        android:id="@+id/createCard"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/isNotFilling"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/spinnerGender"
        app:layout_constraintStart_toStartOf="@+id/spinnerGender"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>