...
    <string name="lastName">Фамилия</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="create">Создать</string>
    <string-array name="Gender">
        <item>Пол</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>


    <!-- Bottom navigation titles -->
    <string name="result">Результаты</string>
...
